[gd_scene load_steps=3 format=3 uid="uid://bvvdcco12v0v8"]

[ext_resource type="Script" path="res://patterns.gd" id="1_ebsvt"]
[ext_resource type="Texture2D" uid="uid://clfqg7sfaqqbf" path="res://images/girl.png" id="2_xl1uw"]

[node name="patterns" type="Node2D"]
script = ExtResource("1_ebsvt")

[node name="Title" type="Label" parent="."]
offset_left = 335.0
offset_top = 10.0
offset_right = 885.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 30
text = "Figure out the pattern:"
horizontal_alignment = 1

[node name="PatternLabel" type="Label" parent="."]
offset_left = 337.0
offset_top = 82.0
offset_right = 887.0
offset_bottom = 184.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="AnswerInput" type="LineEdit" parent="."]
offset_left = 441.0
offset_top = 340.0
offset_right = 790.0
offset_bottom = 379.0
placeholder_text = "Enter your number here"

[node name="ResultLabel" type="Label" parent="."]
offset_left = 427.0
offset_top = 510.0
offset_right = 744.0
offset_bottom = 581.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1

[node name="SubmitButton" type="Button" parent="."]
offset_left = 386.0
offset_top = 413.0
offset_right = 851.0
offset_bottom = 479.0
text = "Submit"

[node name="ChallengerSprite" type="Sprite2D" parent="."]
position = Vector2(154, 327)
scale = Vector2(0.0643857, 0.064375)
texture = ExtResource("2_xl1uw")

[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
